Update memory options of instances